--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-    <h1 style="text-align: center;">Fucking ROCK PAPER SCISSORS MANN!</h1>
+    <h1 style="text-align: center;">ROCK PAPER SCISSORS MANN!</h1>
     <h2 style="text-align: center;">Best of 3!! That's how it's done correctly.</h2>
 
     <div style="text-align: center;">
