--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }];
 
         // simply function for a random number with a max
-        function getRandomInt() {
+        function getRandomInt(max) {
             return Math.floor(Math.random() * Math.floor(max));
         }
 
